<resources>
    <string name="app_name">Impostor</string>
    <string name="impostor_logo_description">Impostor</string>
    <string name="welcome_to">Welcome to</string>
    <string name="onboarding_desc_1">“No baby I don’t want to go out with my friends” guy meets is favourite game.</string>
    <string name="onboarding_desc_2">Did you ever have an exam question where your friend answered 42, you answered Cristiano Ronaldo and one did not even saw the question? Yeah it is basically that</string>
    <string name="choose_game">Choose The Game That\nSuits You The Most</string>
    <string name="have_fun">Have Fun And Break Trust\nBonds</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="new_game">New Game</string>
    <string name="classic">Classic</string>
    <string name="questions">Questions</string>
    <string name="continue_label">Continue</string>
    <string name="play_label">Play</string>
    <string name="back">Back</string>
    <string name="skip">Skip</string>
    <string name="how_many">How Many</string>
    <string name="players_question">Players?</string>
    <string name="impostors_question">Impostors?</string>
    <string name="player_label">PLAYER</string>
    <string name="nickname">Nickname</string>
    <string name="take_photo">Take photo</string>
    <string name="turn_suffix">\'S TURN</string>
    <string name="pass_phone_to">Pass the phone to %1$s</string>
    <string name="see_word">See Word</string>
    <string name="see_question">See Question</string>
    <string name="mr_white">Mr. White</string>
    <string name="impostor">Impostor</string>
    <plurals name="mr_white_count">
        <item quantity="one">Mr. White</item>
        <item quantity="other">Mr. Whites</item>
    </plurals>
    <plurals name="impostor_count">
        <item quantity="one">Impostor</item>
        <item quantity="other">Impostors</item>
    </plurals>
    <string name="your_word_is">Your Word Is</string>
    <string name="your_question_is">Your Question Is</string>
    <string name="youre_mr_white">You\'re Mr. White</string>
    <string name="mr_white_explanation">You don\'t have a word. Try to blend in and guess it!</string>
    <string name="remember_it">Remember it</string>
    <string name="got_it">Got it!</string>
    <string name="dont_show_word">Don\'t show your word to other players</string>
    <string name="dont_show_question">Don\'t show your question to other players</string>
    <string name="content_hidden">Content hidden</string>
    <string name="whitey">"Oh no this is like that algebra class all over again"</string>
    <string name="everyone_is">Everyone Is</string>
    <string name="ready_suffix">Ready!</string>
    <string name="all_players_done">All players are done taking turns.</string>
    <string name="start_voting">Start Voting</string>
    <string name="player_number">Player %1$d</string>
    <string name="vote">Vote</string>
    <string name="voting_your_turn">It\'s your turn</string>
    <string name="dont_show_vote">Don\'t show your vote to other players</string>
    <string name="who_is_impostor">Who Is The Impostor</string>
    <string name="who_is_mr_white">Who Is Mr. White</string>
    <string name="confirm_vote">Confirm Vote</string>
    <string name="vote_locked">Vote Locked!</string>
    <string name="pass_phone_label">Pass the phone to</string>
    <string name="all_votes_locked">All votes are locked. Pass the phone to the group.</string>
    <string name="votes_are_in">THE VOTES ARE IN</string>
    <string name="votes_against">Votes Against</string>
    <string name="voting_tie">IT\'S A TIE</string>
    <string name="runoff_explanation">Vote again. Only the tied players are candidates.</string>
    <string name="start_runoff">Vote Again</string>
    <string name="reveal_role">Reveal Role!</string>
    <string name="civilian">Civilian</string>
    <string name="player_eliminated">This player is eliminated from subsequent voting.</string>
    <string name="round_complete">Round complete!</string>
    <string name="finish_round">Finish Round</string>
    <string name="next_vote">Next Vote</string>
    <string name="asset_placeholder">Placeholder: %1$s</string>
    <string name="prepare_content">Prepare the round</string>
    <string name="prepare_content_description">The organiser supplies the real words or questions before passing the phone.</string>
    <string name="civilian_content">Civilian word / question</string>
    <string name="adversary_content">Impostor word / question</string>
    <string name="see_content">See Content</string>
    <string name="voting_error">Unable to complete this action</string>
    <string name="voting_error_detail">Your submitted votes are preserved. Try again.</string>
    <string name="retry">Try Again</string>
    <string name="good_luck">Good Luck!</string>
    <string name="role_caught">CAUGHT</string>
    <string name="role_not_impostor">NOT\nTHE IMPOSTOR</string>
    <string name="role_was_civilian">WAS A CIVILIAN</string>
    <string name="role_was_impostor">WAS THE IMPOSTOR</string>
    <string name="role_is_white">IS MR. WHITE</string>
    <string name="guess_word_title">Guess The Word</string>
    <string name="guess_word_hint">Guess to win.</string>
    <string name="guess_word_input">Type here</string>
    <string name="guess_submit">Submit</string>
    <string name="round_word_title">The Word Was</string>
    <string name="round_question_title">The Question Was</string>
    <string name="round_content_finished">The round is over!</string>
    <string name="game_over_title">Game Over</string>
    <string name="civilians_win_title">CIVILIANS WIN</string>
    <string name="impostors_win_title">IMPOSTORS WIN</string>
    <string name="white_win_title">MR. WHITE WINS</string>
    <string name="civilians_win_reason">The adversaries were discovered</string>
    <string name="impostors_win_reason">The civilians were eliminated</string>
    <string name="white_win_reason">Mr. White guessed the word</string>
    <string name="view_scores">View Scores</string>
    <string name="scores_title">Scores</string>
    <string name="round_points">+%1$d</string>
    <string name="total_points">%1$d points</string>
    <string name="choose_category_title">CHOOSE</string>
    <string name="category_title">CATEGORY</string>
    <string name="category_actors">Actors</string>
    <string name="category_movies">Movies</string>
    <string name="category_nba">NBA</string>
    <string name="category_football">Football</string>
    <string name="category_series">Series</string>
    <string name="category_singers">Singers</string>
    <string name="selected_category_label">Category: %1$s</string>
</resources>
